# dawchihliou.github.io

./: .eslintignore  .eslintrc.js  .gitignore  .release-it.json  404.html  CHANGELOG.md  Cargo.toml  README.md  articles.html  browserconfig.xml  contact.html  contentlayer.config.ts  expertise.html  index.html  jest.config.js  next.config.js  now.html  package.json  playwright.config.ts  projects.html  publications.html  rss.xml  site.webmanifest  sitemap.xml  tsconfig.json  typings.d.ts  work.html
.github/workflows/: ci.yml
.next/: BUILD_ID  build-manifest.json  prerender-manifest.json
.next/server/: init-server.js.js  on-error-server.js.js  pages-manifest.json
articles/: binary-tree-insertion-in-rust.html  build-better-nextjs-static-sites-with-mdx-and-contentlayer.html  building-custom-google-maps-marker-react-component-like-airbnb-in-nextjs.html  deploying-with-cloud-run-like-vercel-and-netlify.html  easiest-way-to-understand-rust-modules-across-multiple-files.html  event-bus-for-react.html  ex-principal-engineers-guide-to-design-thinking-and-continous-delivery.html  from-frontend-developer-to-principal-software-engineer.html  helloworld.html  how-to-plan-a-project-as-a-principal-software-engineer.html  how-to-run-a-tech-community-in-your-company.html  i-built-a-snappy-full-text-search-with-webassembly-rust-nextjs-and-xor-filters.html  indexing-strings-in-rust-and-typescript.html  is-qwik-faster-than-react-server-component.html  lean-docker-images-for-nextjs.html  optimize-google-cloud-bigquery-and-control-cost.html  share-rust-types-with-typescript-for-webassembly-in-30-seconds.html  stress-testing-concurrent-features-in-react-18.html  testing-with-fixtures-in-rust.html  the-last-dockerfile-you-need-for-nestjs.html  tired-of-slow-code-reviews.html  use-webp-for-better-ux.html  wasm-semantic-search-in-rust.html  writing-your-own-typescript-cli.html
components/ArticalContainer/: ArticalContainer.module.css  ArticalContainer.tsx  index.tsx
components/Article/: Article.module.css  Article.tsx
css/: style-sass.css  style-sass.css.map  style.css  styles.css
data/: articles.ts  data.json  now.mdx
data/content/: now.mdx
e2e/: home.spec.ts
js/: app.js
lib/: webp.js
pages/: _app.tsx  _document.tsx  contact.tsx  expertise.tsx  index.tsx  now.mdx  now.tsx  projects.tsx  publications.tsx  work.tsx
public/: rss.xml
scripts/: github.mjs  image.mjs  meta.mjs  rss.mjs  shields.mjs  sitemap.mjs  tinysearch.mjs
scripts/fulltext-search/: Cargo.toml  index.mjs
scripts/fulltext-search/src/: filter.rs  main.rs  post.rs  storage.rs
scripts/fulltext-search/stopwords/: README.md
styles/: Articles.module.css  Contact.module.css  Expertise.module.css  Home.module.css  Now.module.css  Projects.module.css  Work.module.css  globals.css  menu.css  prism-vs.css  prism-vsc-dark-plus.css  variables.css
utils/: date.ts  resources.ts  socials.ts  title-style.js
views/: default.html
wasm/fulltext-search/: Cargo.toml
wasm/fulltext-search/pkg/: README.md  fulltext_search_core.d.ts  fulltext_search_core.js  fulltext_search_core_bg.js  fulltext_search_core_bg.wasm  fulltext_search_core_bg.wasm.d.ts  package.json
wasm/fulltext-search/src/: filter.rs  lib.rs  storage.rs
wasm/fulltext_search/cli/: Cargo.toml
wasm/fulltext_search/cli/src/: main.rs  post.rs  storage.rs
wasm/fulltext_search/core/: Cargo.toml
wasm/fulltext_search/core/src/: lib.rs
(+1869 files in other folders)
