[package]
name = "fulltext_search_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wee_alloc = "0.4"
once_cell = "1.8"
anyhow = "1.0"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }

[dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]

[dependencies.xorf]
version = "0.8"
default-features = false 
features = ["serde"]