[package]
name = "fulltext_search_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
# The "derive" feature is only required when using #[derive(Serialize, Deserialize)] 
# to make Serde work with structs and enums defined in your crate.
serde = { version = "1.0", features = ["derive"] }
# Support JSON data format for serde
serde_json = "1.0"
bincode = "1.3"
strip_markdown = "0.2"

[dependencies.xorf]
version = "0.8"
default-features = false 
features = ["serde"]
