[package]
name = "fulltext_search_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wee_alloc = "0.4.5"

[dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]
